--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>2.6.15</version>
     </parent>
 
     <groupId>org.opengauss</groupId>
@@ -20,19 +20,19 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.boot.version>2.6.7</spring.boot.version>
+        <spring.boot.version>2.6.15</spring.boot.version>
         <spring.cloud.version>2021.0.0</spring.cloud.version>
         <java.version>11</java.version>
         <druid.version>1.2.11</druid.version>
         <lombok.version>1.18.24</lombok.version>
         <fastjson.version>1.2.75</fastjson.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>32.0.0-jre</guava.version>
         <springdoc.openapi.ui.version>1.6.8</springdoc.openapi.ui.version>
-        <mysql.connector.java.version>8.0.29</mysql.connector.java.version>
+        <mysql.connector.java.version>8.0.30</mysql.connector.java.version>
         <zero.allocation.hashing.version>0.15</zero.allocation.hashing.version>
         <io.confluent.version>7.0.1</io.confluent.version>
         <opengauss.jdbc.version>3.0.0</opengauss.jdbc.version>
-        <snakeyaml.version>1.33</snakeyaml.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
         <powermock.version>2.0.0</powermock.version>
         <commons.cli.version>1.4</commons.cli.version>
         <oshi.version>5.3.6</oshi.version>
